feat: added package details and npm commands for ease of development and information

--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "count-visitors",
+  "version": "1.0.0",
+  "description": "This package can be used to return the number of times people have visited a site, in svg form",
+  "main": "index.js",
   "dependencies": {
-    "fastify": "^4.28.0"
-  }
+    "fastify": "^4.28.0",
+    "rimraf": "^5.0.7"
+  },
+  "scripts": {
+    "start": "node --env-file=.env index.js",
+    "dev": "node --env-file=.env --watch index.js",
+    "clean": "rimraf counter_data"
+  },
+  "author": "Pati Chandana",
+  "license": "ISC"
 }
